--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!doctype html>
 <html lang="en">
   <head>
-    
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/logo-cosmetic2.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gurmeet Kaur Store</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/jpeg" href="/public/logo-cosmetic2.jpg" />
+
+    <!-- Google Site Verification -->
+    <meta name="google-site-verification" content="rM-x0Dtxaq4QbrVGnM_O5Qf6IdnyBtDIcbymVFDiZKk" />
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- React entry point -->
     <script type="module" src="/src/main.jsx"></script>
+
+    <!-- Razorpay Checkout -->
+    <script src="https://checkout.razorpay.com/v1/checkout.js" async></script>
   </body>
 </html>
