style: polish UI for production grade (fonts, animations, sticky header, toasts)

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gurmeet Kaur Store</title>
+    <title>Sartaaj Bharat Store | Premium Electronics & Lifestyle</title>
+    <meta name="description" content="Discover premium electronics, smartphones, and lifestyle products at Sartaaj Bharat. Shop the latest iPhone 15, Samsung Galaxy S25, and more with free shipping." />
 
     <!-- Favicon -->
     <link rel="icon" type="image/jpeg" href="/public/logo-cosmetic2.jpg" />
+
+    <!-- Google Fonts: Outfit (Headings) & Inter (Body) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@400;500;700;800&display=swap" rel="stylesheet">
 
     <!-- Google Site Verification -->
     <meta name="google-site-verification" content="rM-x0Dtxaq4QbrVGnM_O5Qf6IdnyBtDIcbymVFDiZKk" />
